<resources>
    <string name="app_name">全国教育云服务平台</string>
    <string name="title_activity_main">全国教育云服务平台</string>
    <string name="click_to_refresh">没有数据，点击刷新。</string>
    <string name="no_data_for_now">暂时没有相关内容</string>
    <string name="net_error">网络连接错误！</string>
    <string name="net_connect_error">数据请求错误！</string>
    <string name="null_param_error">参数为NULL错误！</string>
    <string name="share_net_error">共享桌面/视频失败，无法链接服务器！</string>
    <string name="just_now">刚刚</string>
    <string name="beforeMin">%d分钟前</string>
    <string name="today">今天 %s</string>
    <string name="username_cant_be_empty">请输入帐号</string>
    <string name="password_cant_be_empty">请输入密码</string>
    <string name="please_update_to">请更新至最新版本</string>
    <string name="checking_update">正在获取最新版本信息…</string>
    <string name="sure_to_clear_cache">确定要清除缓存？</string>
    <string name="sure_to_exit">确认退出登录？</string>
    <string name="activity_detail">活动详情</string>
    <string name="newest_comment">最新评论</string>
    <string name="by_create_time">按开始时间</string>
    <string name="by_count">按点击量</string>
    <string name="by_quality">按评分高低</string>
    <string name="lesson_view">进入观摩</string>
    <string name="lesson_on">进行中</string>
    <string name="lesson_into_prepare">进入备课</string>
    <string name="lesson_into_listen">进入听课</string>
    <string name="lesson_into">进入课程</string>
    <string name="meeting_into">进入会议</string>
    <string name="lesson_view_video">观看视频</string>
    <string name="lesson_unstart">未开始</string>
    <string name="lesson_end">已结束</string>
    <string name="single_chat">私聊</string>
    <string name="group_chat">群聊</string>
    <string name="system_message">系统消息</string>
    <string name="login">登录</string>
    <string name="publish_comment">写下你的话</string>
    <string name="comment_hint">我来说两句</string>
    <string name="net_switch_close">已设置禁止在2G/3G/4G网络下缓存,需要开启后继续</string>
    <string name="school">学校</string>
    <string name="school_child">小孩所在学校</string>
    <string name="my_class">班级</string>
    <string name="my_child_class">小孩所在班级</string>
    <string name="my_post">职位</string>
    <string name="exit">退\ \ \ 出</string>
    <string name="title_activity_video_details">VideoDetailsActivity</string>
    <string name="filter">筛选</string>
    <string name="daily_report">筛选</string>
    <string name="loading">加载中…</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放刷新</string>
    <string name="title_live_period">请选择需要播放的文件</string>
    <string name="title_live_class">%s在线课堂</string>
    <string name="title_schoollive_class">%s直录播课堂</string>
    <string name="no_more_load">没有更多加载!</string>
    <string name="sending">发送中…</string>
    <string name="txt_dialog_wifi_cancel">取消观看</string>
    <string name="txt_dialog_wifi_continue">继续观看</string>
    <string name="txt_dialog_wifi_play_video_tips">您正在使用2G/3G/4G网络，继续观看可能产生超额流量费。</string>
    <string name="tip_homework_list_show_image">您正在使用2G/3G/4G网络，是否需要显示图片？</string>
    <string name="collective_prepare_lessons">集体备课</string>
    <string name="txt_live_history_has_no_play_back_tips">很抱歉，未读取到视频文件。</string>
    <string name="txt_live_no_input_stream">教室信号尚未接入，请稍后…</string>
    <string name="txt_video_meeting_no_input_stream">信号未接入，请稍后…</string>
    <string name="txt_video_meeting_no_input_stream_retry">信号未接入，点击重连…</string>
    <string name="loading_video_framework">正在加载视频模块，请稍后…</string>
    <string name="title_back">返回</string>
    <string name="txt_dialog_download_start">开始下载 %s</string>
    <string name="txt_dialog_download_exist">之前已下载！</string>
    <string name="txt_dialog_download_exist_downloading">已在下载列表中</string>
    <string name="txt_dialog_download_error">获取下载地址失败,请检查网络是否通畅！</string>
    <string name="txt_dialog_download_audio_exist">当前音频已下载！</string>
    <string name="txt_live_playing">正在直播</string>
    <string name="txt_live_prepare">未开始</string>
    <string name="txt_live_over">已结束</string>
    <string name="title_homework">课堂作业</string>
    <string name="class_room_area">地区：</string>
    <string name="class_room_main_info">主讲：</string>
    <string name="class_room_receive_info">接收：</string>
    <string name="class_room_time">上课时间：</string>
    <string name="class_video_un_start">该课程还未开始，请稍等！</string>
    <string name="main_info">%1$s \n%2$s%3$s%4$s</string>
    <string name="class_video_list">视频列表</string>
    <string name="class_video_list_count">共%1$d段</string>
    <string name="class_video_length">时长：</string>
    <string name="class_play_count">播放次数：</string>
    <string name="class_period">节次：</string>
    <string name="title_tab_online_meeting_interacts">互动</string>
    <string name="title_tab_online_meeting_user_lists">用户列表</string>
    <string name="title_tab_online_meeting_messages">聊天区</string>
    <string name="title_tab_online_meeting_documents">文档管理</string>
    <string name="title_tab_online_meeting_prompt">申请发言</string>
    <string name="title_tab_online_meeting_prompt_cancel">取消发言</string>
    <string name="title_tab_online_meeting_prompt_forbidden">禁止发言</string>
    <string name="txt_dialog_forbidden">主讲人已开启免打扰模式,禁止发言</string>
    <string name="format_dialog_loop_patrol">主持人已开启轮巡,不能%s</string>
    <string name="txt_dialog_online_exit">是否要退出本次会议</string>
    <string name="tips_duplicate_click_in_period">您申请发言操作过于频繁，请稍后再试！</string>
    <string name="tips_no_auth_prompt">您没有权限申请发言！</string>
    <string name="tips_add_in">加入中…</string>
    <string name="tips_video_too_short">视频太短，已播放完成！</string>
    <string name="tips_no_data_to_show">暂时没有相关内容</string>
    <string name="tips_no_lesson_live">暂无课程，请稍后再来，谢谢！</string>
    <string name="search_action_resource">资讯</string>
    <string name="search_action_video">视频</string>
    <string name="search_action_doc">文档</string>
    <string name="search_action_group">圈组</string>
    <string name="title_activity_resources">ResourcesActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="resource">优课资源</string>
    <string name="no_login_info">无登录信息</string>
    <string name="title_activity_video_meeting_detail">VideoMeetingDetailActivity</string>
    <string name="latest_comments">最新评论</string>
    <string name="title_activity_statistical">StatisticalActivity</string>
    <string name="count_lessons_today">今日开课数</string>
    <string name="count_lessons_semester">学期开课比例</string>
    <string name="document_resource_details">文档资源详情</string>
    <string name="latest_comment">最新评论</string>
    <string name="resource_details">资源详情</string>
    <string name="more">更多</string>
    <string name="change_password">修改密码</string>
    <string name="channel">频道</string>
    <string name="function">应用</string>
    <string name="my">我的</string>
    <string name="title_activity_more_resource">MoreResourceActivity</string>
    <string name="cache_my">离线缓存</string>
    <string name="setting_my">设置</string>
    <string name="share_bar_code">分享二维码</string>
    <string name="by_rate">按评分高低</string>
    <string name="by_heat">按浏览次数</string>
    <string name="by_release_time">按发布时间</string>
    <string name="meeting_topic">会议主题</string>
    <string name="time_prepared">预约时间</string>
    <string name="time_lesson_prepared">课程时间</string>
    <string name="time_active">活动时间</string>
    <string name="active_requirement">活动要求</string>
    <string name="active_select_lesson">选择课程</string>
    <string name="lesson_view_type">观摩方式</string>
    <string name="active_participate_scope">参与范围</string>
    <string name="time_start">开始时间</string>
    <string name="time_schedule_lesson">排课日期</string>
    <string name="score">        评分:</string>
    <string name="sponsor_name">发起方：</string>
    <string name="sponsor_time">发起时间：</string>
    <string name="meeting_production_name">会议简介</string>
    <string name="association">主讲机构</string>
    <string name="master_classroom">主会场：</string>
    <string name="master_teacher">主讲人：</string>
    <string name="master_participator">参会者：</string>
    <string name="participatorstu">听课学生：</string>
    <string name="participatortea">听课教师：</string>
    <string name="participator_assiciation">参与机构</string>
    <string name="has_permission_record">有录制权限</string>
    <string name="has_permission">是否有权归档到服务器</string>
    <string name="document_relative">相关文档</string>
    <string name="result_meeting">会议成果</string>
    <string name="str_meeting_main_speaker">主持人</string>
    <string name="unstart_meeting_status">主持人还未开始会议，请耐心等待。</string>
    <string name="remove_meeting_status">您已经被请出会议！</string>
    <string name="end_meeting_status">本次会议已经结束！</string>
    <string name="error_meeting_status">您已经在另外一个地点登录系统！</string>
    <string name="record_start">录像开始</string>
    <string name="time">00:00:00</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="subtitle_msg">"请先关闭字幕，再选择字幕"</string>
    <string name="head_msg">"请先关闭片头，再选择片头"</string>
    <string name="end_msg">"请先关闭片尾，再选择片尾"</string>
    <string name="logo_msg">"请先关闭台标，再选择台标"</string>
    <string name="exit_coco">帐号已于别处登录，点击【确定】退出远程导播</string>
    <string name="exit2">主讲教室关闭，点击【确定】退出远程导播</string>
    <string name="class_over">当前课堂已结束</string>
    <string name="system_error">与服务器链接断开，点击【确定】退出远程导播</string>
    <string name="disconnect">与远程课堂终端失去连接，请耐心等待…</string>
    <string name="mode_2">"主讲教师正在使用【互动模式】授课,在退出该模式之前，手动导播功能暂时无法使用"</string>
    <string name="title_remote_director">今日导播</string>
    <string name="please_connect_internet">请先连接网络！</string>
    <string name="login_invalid">登录已失效，请重新登录！</string>
    <string name="all">全部</string>
    <string name="filter_by_property">按属性筛选</string>
    <string name="filter_by_knowledge_point">按知识点筛选</string>
    <string name="property">属性</string>
    <string name="knowledge_point">知识点</string>
    <string name="no_filter">不限</string>
    <string name="video">视频</string>
    <string name="video_model">视频模式</string>
    <string name="show_model">演示模式</string>
    <string name="document">文档</string>
    <string name="info">资讯</string>
    <string name="edit">编辑</string>
    <string name="class_tour">课堂巡视</string>
    <string name="live_classroom">直播课堂</string>
    <string name="blog">博文</string>
    <string name="teacher_recommendation">名师推荐</string>
    <string name="please_login_first">请先登录！</string>
    <string name="title_activity_user_detail">UserDetailActivity</string>
    <string name="slide_to_switch_video">左右滑动切换视频</string>
    <string name="live_class_teacher_fomat">主讲老师:%s</string>
    <string name="news">新闻</string>
    <string name="announcement">公告</string>
    <string name="notice">通知</string>
    <string name="sorry_for_no_contents">暂时没有相关内容</string>
    <string name="clearing_cache">正在清除缓存…</string>
    <string name="fraction_line">%1$d/%2$d</string>
    <string name="exam">测试</string>
    <string name="by_write_time">按撰写时间</string>
    <string name="details">详情</string>
    <string name="simple_rethink">反思</string>
    <string name="click_to_download">点击下载</string>
    <string name="comment">评论</string>
    <string name="courseware">课件</string>
    <string name="office_no_support">暂不支持在线浏览Office教案</string>
    <string name="click_to_open">点击查看</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="new_password">新密码</string>
    <string name="server_address">服务器地址</string>
    <string name="confirm">确定</string>
    <string name="complete_profile">完善个人资料</string>
    <string name="submit">提交</string>
    <string name="phone">联系电话</string>
    <string name="e_mail">电子邮箱</string>
    <string name="status_await_handle">待处理</string>
    <string name="status_handling">处理中</string>
    <string name="status_handled">已处理</string>
    <string name="status_accepted">已验收</string>
    <string name="update">更新</string>
    <string name="new_version_detected_please_update">检测到新版本\n请下载更新</string>
</resources>