<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.codyy.erpsportal.commons.widgets.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete_profile"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/title_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_username"
                style="@style/EtUsername"
                android:layout_marginTop="48dp"
                android:drawableLeft="@drawable/et_name_nonnull"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/et_name_nonnull"
                android:hint="@string/username"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/et_password"
                style="@style/EtPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_et_frame"
                android:drawableLeft="@drawable/et_password_nonnull"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/et_password_nonnull"
                android:hint="@string/new_password"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/et_confirm_password"
                style="@style/EtPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_et_frame"
                android:drawableLeft="@drawable/et_password_nonnull"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/et_password_nonnull"
                android:hint="@string/confirm_password"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/et_phone"
                style="@style/EtUsername"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/et_phone"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/et_phone"
                android:hint="@string/phone"
                android:imeOptions="actionNext"
                android:inputType="phone"/>

            <EditText
                android:id="@+id/et_email"
                style="@style/EtUsername"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/et_mail"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/et_mail"
                android:hint="@string/e_mail"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"/>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:background="@color/bg.btn.unpressed.login"
                android:text="@string/submit"
                android:textColor="#fff"
                android:textSize="20sp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>