<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="18dp"
        tools:text="@string/new_version_detected_please_update" />

    <LinearLayout
        android:id="@+id/ll_btns_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:divider="@drawable/dv_v_dp16"
        android:showDividers="middle">

        <Button
            android:id="@+id/btn_close"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#e16051"
            android:minHeight="40dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#71bf48"
            android:minHeight="40dp"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </LinearLayout>

</LinearLayout>