<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/bg_title">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="登录"
            android:textColor="@color/layout_title_text_color"
            android:textSize="@dimen/layout_title_text_size" />

        <include layout="@layout/title_bottom_line" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:background="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_username"
                style="@style/EtUsername"
                android:layout_marginTop="48dp"
                android:drawableLeft="@drawable/ic_username"
                android:drawablePadding="5dp"
                android:hint="@string/username"
                android:imeOptions="actionNext" />

            <EditText
                android:id="@+id/et_password"
                style="@style/EtPassword"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:imeOptions="actionDone" />

            <com.codyy.erpsportal.commons.widgets.InstantAutoCompleteTv
                android:id="@+id/et_server_address"
                style="@style/EtUsername"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_network"
                android:drawablePadding="5dp"
                android:hint="@string/server_address"
                android:visibility="gone"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:background="@color/bg.btn.unpressed.login"
                android:onClick="login"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>