<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp">

    <TextView
        android:id="@+id/tv_lb_server_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="服务器地址："
        android:textSize="18dp"/>

    <com.codyy.erpsportal.commons.widgets.InstantAutoCompleteTv
        android:id="@+id/et_server_address"
        style="@style/EtServerAddress"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_network"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_network"
        android:hint="@string/server_address"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/bg.btn.unpressed.login"
            android:text="@string/cancel"
            android:textColor="#fff"
            android:textSize="18sp"/>

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/bg.btn.unpressed.login"
            android:text="@string/confirm"
            android:textColor="#fff"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>