<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/toolbar_layout" />

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/filter_drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center">

                <com.codyy.erpsportal.commons.widgets.UpOrDownButton
                    android:id="@+id/btn_by_time"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/by_write_time"/>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="18dp"
                    android:background="#dddddd" />


                <com.codyy.erpsportal.commons.widgets.UpOrDownButton
                    android:id="@+id/btn_by_rate"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/by_quality"/>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="18dp"
                    android:background="#dddddd" />

                <com.codyy.erpsportal.commons.widgets.UpOrDownButton
                    android:id="@+id/btn_by_heat"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/by_count"/>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/fl_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></FrameLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_filter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"></FrameLayout>
    </android.support.v4.widget.DrawerLayout>
</LinearLayout>